apex/objects/Migration_Readiness_Finding__c/Migration_Readiness_Finding__c.object-meta.xml
<CustomObject>
    <label>Migration Readiness Finding</label>
    <pluralLabel>Migration Readiness Findings</pluralLabel>
    <nameField>
        <label>Finding Name</label>
        <type>AutoNumber</type>
        <displayFormat>MRF-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>
        Scratch/storage object for record-level findings written by MigrationReadinessBatch.apex.
        Read by the npsp-migration-readiness-scanner CLI plugin and folded into its report. Safe to
        truncate between scans - this object holds no source-of-truth data, only scan output.
    </description>
</CustomObject>