apex/objects/Migration_Readiness_Finding__c/fields/Finding_Type__c.field-meta.xml
<CustomField>
    <fullName>Finding_Type__c</fullName>
    <label>Finding Type</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Machine-readable finding key, e.g. household_affiliation_mismatch. Matched against src/lib/scoring.ts check IDs by the CLI plugin.</description>
</CustomField>