apex/objects/Migration_Readiness_Finding__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <description>Id of the record (e.g. Contact) that triggered this finding.</description>
</CustomField>