apex/objects/Migration_Readiness_Finding__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>low</fullName><default>false</default></value>
            <value><fullName>medium</fullName><default>true</default></value>
            <value><fullName>high</fullName><default>false</default></value>
            <value><fullName>critical</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>